--- a/index.html
+++ b/index.html
@@ -24,23 +24,58 @@
       <img src="./images/logo.png" alt="logo" />
     </div>
     <div class="section2">
-      <h2>Vårt nye spill, Franksenstein Vs the World</h2>
+      <h2>Hva er Polar Games?</h2>
       <p>
+        Velkommen til Polar Games - ditt ultimate reisemål for spillinnovasjon
+        og underholdning! Som en ledende kraft innen spillutvikling, forplikter
+        vi oss til å levere unike og minneverdige spillopplevelser som tar deg
+        med på fantastiske eventyr. Med lidenskap, kreativitet og dedikasjon
+        kombinerer vi cutting-edge teknologi med kunstnerisk talent for å skape
+        spill som fanger fantasien og utfordrer grensene for hva som er mulig.
+      </p>
+      <p>
+        Polar Games ble grunnlagt med visjonen om å skape et fellesskap av
+        spillentusiaster og sette standarden for kvalitet og nyskapning i
+        spillverdenen. Vårt erfarne team av utviklere, designere og kunstnere
+        arbeider sammen i et dynamisk miljø, drevet av en felles lidenskap for å
+        skape spill som inspirerer, utfordrer og underholder.
+      </p>
+      <p>
+        Vi tror på å skape spill som appellerer til et bredt publikum, fra
+        erfarne gamere til de som nettopp har begynt sin reise inn i
+        spillverdenen. Vårt mangfoldige utvalg av prosjekter spenner over ulike
+        sjangre, fra actionfylte eventyr og strategiske utfordringer til
+        følelsesladde historiedrevne opplevelser.
+      </p>
+    </div>
+    <div class="section3">
+      <h3>Kontakt oss</h3>
+
+      <img src="./images/polar_games_visittkort.png" class="viskort" />
+    </div>
+    <div class="section4">
+      <h1 class="spilltittel">Frankenstein Vs the World</h1>
+      <img src="./images/frankenstein.png" class="frankenstein" />
+      <p class="beskrivelse">
+        Ett eksempel på Frankenstein med varierende oppgraderinger
+      </p>
+      <h2 class="h2two">Spillets mekanismer</h2>
+      <p class="p2">
         Tar direkte kontroll av Frankensteins Monster som kan bruke ulike melee
         og distanse våpen i kamp mot ulike mennesker og monstre. Det spiller
         litt som God of War hvor du går og slår fiender, men du kan også få
-        third-person shooter mekanikker gjennom oppgraderinger.
+        third-person shooter mekanikker gjennom oppgraderinger. Spillet har også
+        simple RPG mekanikker hvor du får XP og øker level som gir deg skill
+        points.
       </p>
-      <p>
-        Spillet har også simple RPG mekanikker hvor du får XP og øker level som
-        gir deg skill points. Du sloss for å beskytte slottet/labben til Victor,
-        og kan sloss sammen med zombier og ulike minions. Zombier kan
-        oppgraderes utover spillet, og bli cyborgs. Du kan også sette opp
-        våpenbeskyttelse på labben. Du må slå fiendene før de tar deg eller
-        labben ned. Om du dør eller laboratoriet blir ødelagt må du laste inn
-        forrige large punkt.
+      <p class="p2">
+        Du sloss for å beskytte slottet/labben til Victor, og kan sloss sammen
+        med zombier og ulike minions. Zombier kan oppgraderes utover spillet, og
+        bli cyborgs. Du kan også sette opp våpenbeskyttelse på labben. Du må slå
+        fiendene før de tar deg eller labben ned. Om du dør eller laboratoriet
+        blir ødelagt må du laste inn forrige large punkt.
       </p>
-      <p>
+      <p class="p2">
         Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’ du kan
         skape for monsteret ditt. Du kan endre på kroppsdelene som virkelig har
         en stor effekt på hvordan du spiller og sloss. I tillegg til at det er
@@ -50,11 +85,6 @@
         monstrene vil gi spilleren en virkelig utfordring i form av utfordrende
         boss-fights.
       </p>
-    </div>
-    <div class="section3">
-      <h3>Kontakt oss</h3>
-
-      <img src="./images/polar_games_visittkort.png" class="viskort" />
     </div>
   </body>
 </html>
