--- a/index.html
+++ b/index.html
@@ -60,31 +60,37 @@
         Ett eksempel på Frankenstein med varierende oppgraderinger
       </p>
       <h2 class="h2two">Spillets mekanismer</h2>
-      <p class="p2">
-        Tar direkte kontroll av Frankensteins Monster som kan bruke ulike melee
-        og distanse våpen i kamp mot ulike mennesker og monstre. Det spiller
-        litt som God of War hvor du går og slår fiender, men du kan også få
-        third-person shooter mekanikker gjennom oppgraderinger. Spillet har også
-        simple RPG mekanikker hvor du får XP og øker level som gir deg skill
-        points.
-      </p>
-      <p class="p2">
-        Du sloss for å beskytte slottet/labben til Victor, og kan sloss sammen
-        med zombier og ulike minions. Zombier kan oppgraderes utover spillet, og
-        bli cyborgs. Du kan også sette opp våpenbeskyttelse på labben. Du må slå
-        fiendene før de tar deg eller labben ned. Om du dør eller laboratoriet
-        blir ødelagt må du laste inn forrige large punkt.
-      </p>
-      <p class="p2">
-        Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’ du kan
-        skape for monsteret ditt. Du kan endre på kroppsdelene som virkelig har
-        en stor effekt på hvordan du spiller og sloss. I tillegg til at det er
-        store visuelle forskjeller. Spillet er også en unik kombinasjon av
-        klassiske film monster og mer moderne og futuristiske elementer. Det er
-        en stor variasjon av fiender og mengden blir større og de klassiske film
-        monstrene vil gi spilleren en virkelig utfordring i form av utfordrende
-        boss-fights.
-      </p>
+      <div class="section42">
+        <div class="paragraphs">
+          <p class="p2">
+            Tar direkte kontroll av Frankensteins Monster som kan bruke ulike
+            melee og distanse våpen i kamp mot ulike mennesker og monstre. Det
+            spiller litt som God of War hvor du går og slår fiender, men du kan
+            også få third-person shooter mekanikker gjennom oppgraderinger.
+            Spillet har også simple RPG mekanikker hvor du får XP og øker level
+            som gir deg skill points.
+          </p>
+          <p class="p2">
+            Du sloss for å beskytte slottet/labben til Victor, og kan sloss
+            sammen med zombier og ulike minions. Zombier kan oppgraderes utover
+            spillet, og bli cyborgs. Du kan også sette opp våpenbeskyttelse på
+            labben. Du må slå fiendene før de tar deg eller labben ned. Om du
+            dør eller laboratoriet blir ødelagt må du laste inn forrige large
+            punkt.
+          </p>
+          <p class="p2">
+            Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’ du
+            kan skape for monsteret ditt. Du kan endre på kroppsdelene som
+            virkelig har en stor effekt på hvordan du spiller og sloss. I
+            tillegg til at det er store visuelle forskjeller. Spillet er også en
+            unik kombinasjon av klassiske film monster og mer moderne og
+            futuristiske elementer. Det er en stor variasjon av fiender og
+            mengden blir større og de klassiske film monstrene vil gi spilleren
+            en virkelig utfordring i form av utfordrende boss-fights.
+          </p>
+        </div>
+        <img src="./images/lab.png" class="lab" />
+      </div>
     </div>
   </body>
 </html>
