--- a/index.html
+++ b/index.html
@@ -16,81 +16,90 @@
     <header>
       <h1>Polar Games</h1>
       <ul>
-        <li>Om</li>
-        <li>Kontakt</li>
+        <li><a href="#info">Info</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+        <li><a href="#frankenstein">Frankenstein</a></li>
       </ul>
     </header>
     <div class="section1">
       <img src="./images/logo.png" alt="logo" />
     </div>
-    <div class="section2">
-      <h2>Hva er Polar Games?</h2>
-      <p>
-        Velkommen til Polar Games - ditt ultimate reisemål for spillinnovasjon
-        og underholdning! Som en ledende kraft innen spillutvikling, forplikter
-        vi oss til å levere unike og minneverdige spillopplevelser som tar deg
-        med på fantastiske eventyr. Med lidenskap, kreativitet og dedikasjon
-        kombinerer vi cutting-edge teknologi med kunstnerisk talent for å skape
-        spill som fanger fantasien og utfordrer grensene for hva som er mulig.
-      </p>
-      <p>
-        Polar Games ble grunnlagt med visjonen om å skape et fellesskap av
-        spillentusiaster og sette standarden for kvalitet og nyskapning i
-        spillverdenen. Vårt erfarne team av utviklere, designere og kunstnere
-        arbeider sammen i et dynamisk miljø, drevet av en felles lidenskap for å
-        skape spill som inspirerer, utfordrer og underholder.
-      </p>
-      <p>
-        Vi tror på å skape spill som appellerer til et bredt publikum, fra
-        erfarne gamere til de som nettopp har begynt sin reise inn i
-        spillverdenen. Vårt mangfoldige utvalg av prosjekter spenner over ulike
-        sjangre, fra actionfylte eventyr og strategiske utfordringer til
-        følelsesladde historiedrevne opplevelser.
-      </p>
-    </div>
-    <div class="section3">
-      <h3>Kontakt oss</h3>
-
-      <img src="./images/polar_games_visittkort.png" class="viskort" />
-    </div>
-    <div class="section4">
-      <h1 class="spilltittel">Frankenstein Vs the World</h1>
-      <img src="./images/frankenstein.png" class="frankenstein" />
-      <p class="beskrivelse">
-        Ett eksempel på Frankenstein med varierende oppgraderinger
-      </p>
-      <h2 class="h2two">Spillets mekanismer</h2>
-      <div class="section42">
-        <div class="paragraphs">
-          <p class="p2">
-            Tar direkte kontroll av Frankensteins Monster som kan bruke ulike
-            melee og distanse våpen i kamp mot ulike mennesker og monstre. Det
-            spiller litt som God of War hvor du går og slår fiender, men du kan
-            også få third-person shooter mekanikker gjennom oppgraderinger.
-            Spillet har også simple RPG mekanikker hvor du får XP og øker level
-            som gir deg skill points.
-          </p>
-          <p class="p2">
-            Du sloss for å beskytte slottet/labben til Victor, og kan sloss
-            sammen med zombier og ulike minions. Zombier kan oppgraderes utover
-            spillet, og bli cyborgs. Du kan også sette opp våpenbeskyttelse på
-            labben. Du må slå fiendene før de tar deg eller labben ned. Om du
-            dør eller laboratoriet blir ødelagt må du laste inn forrige large
-            punkt.
-          </p>
-          <p class="p2">
-            Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’ du
-            kan skape for monsteret ditt. Du kan endre på kroppsdelene som
-            virkelig har en stor effekt på hvordan du spiller og sloss. I
-            tillegg til at det er store visuelle forskjeller. Spillet er også en
-            unik kombinasjon av klassiske film monster og mer moderne og
-            futuristiske elementer. Det er en stor variasjon av fiender og
-            mengden blir større og de klassiske film monstrene vil gi spilleren
-            en virkelig utfordring i form av utfordrende boss-fights.
-          </p>
-        </div>
-        <img src="./images/lab.png" class="lab" />
+    <section id="info">
+      <div class="section2">
+        <h2>Hva er Polar Games?</h2>
+        <p>
+          Velkommen til Polar Games - ditt ultimate reisemål for spillinnovasjon
+          og underholdning! Som en ledende kraft innen spillutvikling,
+          forplikter vi oss til å levere unike og minneverdige spillopplevelser
+          som tar deg med på fantastiske eventyr. Med lidenskap, kreativitet og
+          dedikasjon kombinerer vi cutting-edge teknologi med kunstnerisk talent
+          for å skape spill som fanger fantasien og utfordrer grensene for hva
+          som er mulig.
+        </p>
+        <p>
+          Polar Games ble grunnlagt med visjonen om å skape et fellesskap av
+          spillentusiaster og sette standarden for kvalitet og nyskapning i
+          spillverdenen. Vårt erfarne team av utviklere, designere og kunstnere
+          arbeider sammen i et dynamisk miljø, drevet av en felles lidenskap for
+          å skape spill som inspirerer, utfordrer og underholder.
+        </p>
+        <p>
+          Vi tror på å skape spill som appellerer til et bredt publikum, fra
+          erfarne gamere til de som nettopp har begynt sin reise inn i
+          spillverdenen. Vårt mangfoldige utvalg av prosjekter spenner over
+          ulike sjangre, fra actionfylte eventyr og strategiske utfordringer til
+          følelsesladde historiedrevne opplevelser.
+        </p>
       </div>
-    </div>
+    </section>
+    <section id="kontakt">
+      <div class="section3">
+        <h3>Kontakt oss</h3>
+
+        <img src="./images/polar_games_visittkort.png" class="viskort" />
+      </div>
+    </section>
+    <section id="frankenstein">
+      <div class="section4">
+        <img src="./images/logospill.png" class="tittel" />
+        <img src="./images/frankenstein.png" class="frankenstein" />
+        <p class="beskrivelse">
+          Ett eksempel på Frankenstein med varierende oppgraderinger
+        </p>
+        <h2 class="h2two">Spillets mekanismer</h2>
+        <div class="section42">
+          <div class="paragraphs">
+            <p class="p2">
+              Tar direkte kontroll av Frankensteins Monster som kan bruke ulike
+              melee og distanse våpen i kamp mot ulike mennesker og monstre. Det
+              spiller litt som God of War hvor du går og slår fiender, men du
+              kan også få third-person shooter mekanikker gjennom
+              oppgraderinger. Spillet har også simple RPG mekanikker hvor du får
+              XP og øker level som gir deg skill points.
+            </p>
+            <p class="p2">
+              Du sloss for å beskytte slottet/labben til Victor, og kan sloss
+              sammen med zombier og ulike minions. Zombier kan oppgraderes
+              utover spillet, og bli cyborgs. Du kan også sette opp
+              våpenbeskyttelse på labben. Du må slå fiendene før de tar deg
+              eller labben ned. Om du dør eller laboratoriet blir ødelagt må du
+              laste inn forrige large punkt.
+            </p>
+            <p class="p2">
+              Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’
+              du kan skape for monsteret ditt. Du kan endre på kroppsdelene som
+              virkelig har en stor effekt på hvordan du spiller og sloss. I
+              tillegg til at det er store visuelle forskjeller. Spillet er også
+              en unik kombinasjon av klassiske film monster og mer moderne og
+              futuristiske elementer. Det er en stor variasjon av fiender og
+              mengden blir større og de klassiske film monstrene vil gi
+              spilleren en virkelig utfordring i form av utfordrende
+              boss-fights.
+            </p>
+          </div>
+          <img src="./images/lab.png" class="lab" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
