--- a/index.html
+++ b/index.html
@@ -101,5 +101,10 @@
         </div>
       </div>
     </section>
+    <section id="banner">
+      <div class="section5">
+        <img src="./images/frankensteinvstheworldbanner.png" class="banner" />
+      </div>
+    </section>
   </body>
 </html>
