--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               laste inn forrige large punkt.
             </p>
             <p class="p2">
-              Det som virkelig gjør spillet unikt er hvor mye ulike ‘’builds’’
-              du kan skape for monsteret ditt. Du kan endre på kroppsdelene som
+              Det som virkelig gjør spillet unikt er hvor mye ulike builds du
+              kan skape for monsteret ditt. Du kan endre på kroppsdelene som
               virkelig har en stor effekt på hvordan du spiller og sloss. I
               tillegg til at det er store visuelle forskjeller. Spillet er også
               en unik kombinasjon av klassiske film monster og mer moderne og
